Se eliminan controladores, rutas y modelos que ya no esan en el modelo de datos. Se actualizan modelos con nombres nuevos. Se actualiza archivo conf para que quede como los otros repos #7
