# swagger/swagger.json
@@ -733,179 +733,6 @@
                 }
             }
         },
-        "/tipo_relacion_lugar/": {
-            "get": {
-                "tags": [
-                    "tipo_relacion_lugar"
-                ],
-                "description": "get TipoRelacionLugar",
-                "operationId": "TipoRelacionLugarController.Get All",
-                "parameters": [
-                    {
-                        "in": "query",
-                        "name": "query",
-                        "description": "Filter. e.g. col1:v1,col2:v2 ...",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "fields",
-                        "description": "Fields returned. e.g. col1,col2 ...",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "sortby",
-                        "description": "Sorted-by fields. e.g. col1,col2 ...",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "order",
-                        "description": "Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "limit",
-                        "description": "Limit the size of result set. Must be an integer",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "offset",
-                        "description": "Start position of result set. Must be an integer",
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.TipoRelacionLugar"
-                        }
-                    },
-                    "404": {
-                        "description": "not found resource"
-                    }
-                }
-            },
-            "post": {
-                "tags": [
-                    "tipo_relacion_lugar"
-                ],
-                "description": "create TipoRelacionLugar",
-                "operationId": "TipoRelacionLugarController.Post",
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "body for TipoRelacionLugar content",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.TipoRelacionLugar"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "{int} models.TipoRelacionLugar"
-                    },
-                    "400": {
-                        "description": "the request contains incorrect syntax"
-                    }
-                }
-            }
-        },
-        "/tipo_relacion_lugar/{id}": {
-            "get": {
-                "tags": [
-                    "tipo_relacion_lugar"
-                ],
-                "description": "get TipoRelacionLugar by id",
-                "operationId": "TipoRelacionLugarController.Get One",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "description": "The key for staticblock",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.TipoRelacionLugar"
-                        }
-                    },
-                    "404": {
-                        "description": "not found resource"
-                    }
-                }
-            },
-            "put": {
-                "tags": [
-                    "tipo_relacion_lugar"
-                ],
-                "description": "update the TipoRelacionLugar",
-                "operationId": "TipoRelacionLugarController.Put",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "description": "The id you want to update",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "body for TipoRelacionLugar content",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.TipoRelacionLugar"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.TipoRelacionLugar"
-                        }
-                    },
-                    "400": {
-                        "description": "the request contains incorrect syntax"
-                    }
-                }
-            },
-            "delete": {
-                "tags": [
-                    "tipo_relacion_lugar"
-                ],
-                "description": "delete the TipoRelacionLugar",
-                "operationId": "TipoRelacionLugarController.Delete",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "description": "The id you want to delete",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{string} delete success!"
-                    },
-                    "404": {
-                        "description": "not found resource"
-                    }
-                }
-            }
-        },
         "/valor_atributo_lugar/": {
             "get": {
                 "tags": [
@@ -1133,7 +960,7 @@
                 "Nombre": {
                     "type": "string"
                 },
-                "TipoLugar": {
+                "TipoLugarId": {
                     "$ref": "#/definitions/models.TipoLugar"
                 }
             }
@@ -1155,14 +982,11 @@
                     "type": "integer",
                     "format": "int64"
                 },
-                "LugarHijo": {
+                "LugarHijoId": {
                     "$ref": "#/definitions/models.Lugar"
                 },
-                "LugarPadre": {
+                "LugarPadreId": {
                     "$ref": "#/definitions/models.Lugar"
-                },
-                "TipoRelacionLugar": {
-                    "$ref": "#/definitions/models.TipoRelacionLugar"
                 }
             }
         },
@@ -1198,43 +1022,11 @@
                 }
             }
         },
-        "models.TipoRelacionLugar": {
-            "title": "TipoRelacionLugar",
-            "type": "object",
-            "properties": {
-                "Activo": {
-                    "type": "boolean"
-                },
-                "CodigoAbreviacion": {
-                    "type": "string"
-                },
-                "Descripcion": {
-                    "type": "string"
-                },
-                "FechaCreacion": {
-                    "type": "string"
-                },
-                "FechaModificacion": {
-                    "type": "string"
-                },
-                "Id": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "Nombre": {
-                    "type": "string"
-                },
-                "NumeroOrden": {
-                    "type": "number",
-                    "format": "double"
-                }
-            }
-        },
         "models.ValorAtributoLugar": {
             "title": "ValorAtributoLugar",
             "type": "object",
             "properties": {
-                "AtributoLugar": {
+                "AtributoLugarId": {
                     "$ref": "#/definitions/models.AtributoLugar"
                 },
                 "FechaCreacion": {
@@ -1247,7 +1039,7 @@
                     "type": "integer",
                     "format": "int64"
                 },
-                "Lugar": {
+                "LugarId": {
                     "$ref": "#/definitions/models.Lugar"
                 },
                 "Valor": {
@@ -1268,10 +1060,6 @@
         {
             "name": "valor_atributo_lugar",
             "description": "ValorAtributoLugarController operations for ValorAtributoLugar\n"
-        },
-        {
-            "name": "tipo_relacion_lugar",
-            "description": "TipoRelacionLugarController operations for TipoRelacionLugar\n"
         },
         {
             "name": "lugar",
